@@ -1,3 +1,9 @@
+2011-01-27  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/x86_64/atom/rsh1aors_n.asm: New file, grabbing another asm file.
+	* mpn/x86_64/atom/popcount.asm: Likewise.
+	* mpn/x86_64/atom/dive_1.asm: Likewise.
+
 2011-01-26  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/alpha/invert_limb.asm: Complete rewrite.
